{
    "name": "VehicleInputActions",
    "maps": [
        {
            "name": "Vehicle",
            "id": "3165492c-09f6-4833-a3da-0255ebcee1d5",
            "actions": [
                {
                    "name": "Steering",
                    "type": "PassThrough",
                    "id": "9ac870d3-fc4a-4823-af27-033be7b5c295",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Braking",
                    "type": "Value",
                    "id": "60732a60-f93c-4182-8da6-b4606b15086e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Acceleration",
                    "type": "Value",
                    "id": "0b6bfa0f-2068-4b47-9c52-13899dd4442d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Clutch",
                    "type": "Value",
                    "id": "2569e045-4d67-4d60-96fd-f06ae46828a4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StartEngine",
                    "type": "Button",
                    "id": "17f2383c-40db-40af-9e9c-0d5e70cd9243",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShiftUP",
                    "type": "Button",
                    "id": "b6945e8a-e13b-4e90-b12e-9b25b4e5bab8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ShiftDOWN",
                    "type": "Button",
                    "id": "8dcb1d5e-7e88-4d08-8b8d-e2ae6403b12d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "18c0ef5e-0ed4-4b36-bd72-319c6d2532ea",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "638824c8-82fd-4909-9ae1-6a975cf14a66",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "56c92af4-5632-4cac-8074-a9a6765d54e8",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad",
                    "id": "ddfd05d0-8e54-4833-a145-bed3c5af1601",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c57a5c8b-fdff-41b0-ba83-d72125db3414",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bc015404-74e5-4384-84cb-876171895a20",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steering",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4d30236c-aa05-4c59-b6f1-43f3bb2922d5",
                    "path": "<HID::Logitech G29 Driving Force Racing Wheel>/rz",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Braking",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c0cf47cc-cc89-464a-a430-248e4c65d582",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Braking",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a98d459-15df-4ae6-b4b3-3a4f8473c22f",
                    "path": "<HID::Logitech G29 Driving Force Racing Wheel>/z",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f790006-a774-41bd-bf51-7b97296e6029",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Acceleration",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e5fa782-79a0-4d2f-b263-e58642a65c18",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StartEngine",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15b2144a-627f-4f8e-b645-fde31ec56dcd",
                    "path": "<HID::Logitech G29 Driving Force Racing Wheel>/stick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clutch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c9c493c-b0ab-4953-a0d6-981ec1e9b726",
                    "path": "<HID::Logitech G29 Driving Force Racing Wheel>/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftUP",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0448a37b-5f9a-439d-bca7-a037706ceba4",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftUP",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f23ccedf-aabe-4cfa-a90f-e2a0331c2e88",
                    "path": "<HID::Logitech G29 Driving Force Racing Wheel>/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftDOWN",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f137a5a-602a-46e8-a069-4de598e1ebc2",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShiftDOWN",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "New action map",
            "id": "d7d295d2-aa13-4859-8fec-62bd2a9dfc12",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "9e10c162-f755-4e2e-99a0-4317ebba2ae3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "01b2d4c4-74fc-4f92-b1df-57e8aaef9105",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}